--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.16.2",
+  "version": "0.16.3",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -22,9 +22,9 @@
     "build-storybook": "build-storybook"
   },
   "peerDependencies": {
+    "@shallot-ui/theme": "0.x",
     "react": ">=16",
-    "styled-components": ">=5",
-    "@shallot-ui/theme": "0.x"
+    "styled-components": ">=5"
   },
   "husky": {
     "hooks": {
